fixed header img not appearing on mobile

--- a/marshstyles.css
+++ b/marshstyles.css
@@ -147,6 +147,7 @@ section ul {
 /* Mobile responsive styles */
 @media (max-width: 768px) {
   .main-header {
+    background-image: url('IMGs/MarshHeader.jpg');
     height: 200px;
     background-position: center;
   }
